--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,8 @@ nav#mainNav {
 
   font-size: 0.9rem;
   font-weight: bold;
+
+  padding: 0px 15px;
 }
 
 /* Navbar Buttons */
@@ -217,6 +219,7 @@ nav#mainNav #searchBarSection input:focus{
 #navbar2{
   height: 40px;
   background-color: #232f3e;
+  padding: 0px 15px;
 
   color: white;
   font-size: 0.9rem;
@@ -235,4 +238,124 @@ nav#mainNav #searchBarSection input:focus{
 
 #navbar2 ul li:nth-child(1){
   font-weight: bold;
+}
+
+/* Navbar 3 */
+#navbar3{
+  height: 35px;
+  background-color: #eee;
+  border-bottom: #ccc 1px solid;
+  padding: 0px 15px;
+
+  font-size: 0.75rem;
+  color: #333;
+}
+
+#navbar3 ul{
+  list-style: none;
+  height: 35px;
+
+  display: flex;
+  align-items: center;
+}
+
+.navbarButton2{
+  padding: 10px;
+  border-bottom: transparent 3px solid;
+}
+.navbarButton2:hover{
+  padding: 7px 10px;
+  color: rgb(233, 151, 0);
+  border-bottom: orange 3px solid;
+  cursor: pointer;
+}
+
+/* MAIN SECTION */
+main{
+  /* display: grid; */
+  margin: auto;
+  max-width: 1500px;
+  /* background-color: #232f3e1b; */
+  height: 90vh; /*DELETE LATER*/
+  color: #555;
+}
+
+main a{
+  color: rgb(0, 162, 154);
+}
+main a:hover{
+  color: rgb(243, 154, 0);
+}
+
+main p:nth-child(1){
+ color: #555;
+ font-size: 0.75rem;
+ margin: 10px 0px 10px 10px;
+}
+
+main p:nth-child(1) a{
+ color: #555;
+ text-decoration: none;
+ font-size: 0.75rem;
+}
+main p:nth-child(1) a:hover{
+ text-decoration: underline;
+}
+
+main .grid{
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 3.65fr 3fr 1.5fr;
+  gap: 1rem;
+}
+
+main .item{
+  background-color: #eeeeee;
+  height: 100vh;
+}
+
+main #productDisplaySection{
+  display: flex;
+  gap: 10px;
+}
+
+main #productDisplaySection ul{
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  width: 40px;
+  gap: 5px;
+}
+
+main #productDisplaySection ul li img{
+  border-radius: 5px;
+  border: 1px #777 solid ;
+}
+
+main #productDisplaySection ul li img:hover{
+  cursor: pointer;
+}
+
+main #productDisplaySection #currentImg{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  gap: 10px;
+}
+
+main #productDisplaySection #currentImg img{
+  position: relative;
+  top: 20px;
+  width: 600px;
+}
+main #productDisplaySection #currentImg img:hover{
+  cursor: pointer;
+}
+
+main #productDisplaySection #currentImg p{
+position: relative;
+top: 15px;
+text-align: center;
+font-size: 0.85rem;
+
 }
